# overleaf-git-api

./: Makefile  README.md  config.py  main.py  parser.py  pyproject.toml  setup.py
src/overleaf2gitlab/: backup.py  config.py  main.py  parser.py
src/overleaf2gitlab/backup/: __init__.py  git.py  operations.py
src/overleaf2gitlab/config/: __init__.py  manager.py  operations.py  validation.py
